# teeth_xray_report

./: .~lock.evaluation_results.csv#  README.md  compare_input_out_llm.py  elsarticle-template-num.tex  eval_predictions.py  evaluation_results.csv  finetune_vlm_qlora.py  infer_ft.py  infer_openai.py  infer_yolo.py  pyproject.toml  teeth.ipynb
config/local_vlm/: qwen_ft_2.yaml  qwen_ft_missing_mask.yaml
config/openai/: gpt_5_2_baseline.yaml  gpt_5_2_missing.yaml
config/yolo/: yolo_1.yaml
doc/: bibliography.bib
output_metrics/: diffs_examples.txt  per_image_label_metrics_llm_guided_yoloSAM.csv  per_image_label_metrics_output_llm_guided.csv  summary_by_label_input_llm_guided.csv  summary_by_label_output_llm_guided.csv
sections/: 1_intro.tex  2_related_works.tex
src/teeth/: evals.py  prompts.py  utils.py
